<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about_me.AboutMeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_image_overlay"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/about_me_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Title"
                android:textColor="@color/white"
                android:text="@string/about_me_title" />

            <View
                android:layout_width="180dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:layout_marginBottom="23dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text"
                android:gravity="center"
                android:text="@string/about_me_description" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/hobbies_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/SubTitle"
                android:textColor="@color/white"
                android:text="@string/hobbies_subtitle" />

            <View
                android:layout_width="130dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_airplane_white_24dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginEnd="13dp"
                    android:contentDescription="@string/traveling_hobby" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/traveling_hobby"
                    style="@style/text">
                </TextView>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_games_white_24dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginEnd="13dp"
                    android:contentDescription="@string/gaming_hobby" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gaming_hobby"
                    style="@style/text">
                </TextView>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_card_white_24dp"
                    android:layout_marginRight="13dp"
                    android:contentDescription="@string/magic_the_gathering_hobby"
                    android:layout_marginEnd="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magic_the_gathering_hobby"
                    style="@style/text">
                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/checkbox_title"
                style="@style/SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_title"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/checkbox_intro_text"
                style="@style/text"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_intro"
                android:layout_marginBottom="5dp"/>

            <CheckBox
                android:id="@+id/custom_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_text"
                android:button="@drawable/custom_checkbox"
                />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>